<resources>
    <string name="nothing" translatable="false" />

    <string name="app_name">Pixel Artist</string>

    <!-- Color selector -->
    <string name="color_selector">Color Selector</string>
    <string name="color_selector_apply">Apply</string>

    <!-- Menu items -->
    <string name="menu_new">New</string>
    <string name="menu_open">Open</string>
    <string name="menu_save">Save</string>
    <string name="menu_export">Export</string>
    <string name="menu_about">About</string>
    <string name="menu_fill">Fill screen with selected color</string>
    <string name="menu_grid">Show/hide pixel grid</string>

    <!-- Alert dialogs -->
    <string name="alert_dialog_title_new">New drawing</string>
    <string name="alert_dialog_message_new">
        Creating a new drawing will erase the old one.
        \n\nThis operation cannot be undone!
    </string>
    <string name="alert_dialog_title_fill">Fill drawable area</string>
    <string name="alert_dialog_message_fill">
        This will fill the drawable area with the selected color.
        \n\nThis operation cannot be undone!
    </string>

    <!-- Toasts -->
    <string name="toast_save">Not implemented yet, sorry! Use the screen capture :)</string>
    <string name="toast_saved">File saved</string>
    <string name="toast_not_saved">File could not be saved</string>
    <string name="toast_could_not_create_app_folder">Couldn\'t create app folder</string>

    <!-- Files -->
    <string name="file_name">Filename</string>
    <string name="file_opened">File opened successfully</string>
    <string name="file_could_not_open">Couldn\'t open file</string>
    <string name="file_not_found">File not found</string>
    <string name="file_no_files_found">No files found</string>

    <!-- Drawer -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Write permission -->
    <string name="write_permission_unavailable">App doesn\'t have write permission!</string>
    <string name="write_permission_granted">Write permission has been granted.</string>

    <!-- Error messages -->
    <string name="error_something_went_wrong">Something went wrong</string>
</resources>
